add twitch controller swagger
